syntax = "proto3";

package interop;

import "google/protobuf/empty.proto";
import "interop/unique_id.proto";
import "interop/app_connection_descriptor.proto";
import "interop/app_metadata_service.proto";

message Context {
	string id = 1;
}

message ContextsList {
	repeated Context contexts = 1;
}

message InvocationRef {
	interop.AppMetamodelInfo app_info = 1;
	interop.AppConnectionDescriptor target = 2;
}

message InvocationsList {
	repeated InvocationRef invocations = 1;
}

message ContextToInvocations {
	Context context = 1;
	InvocationsList invocations = 2;
}

message ContextToInvocationsList {
	repeated ContextToInvocations contexts = 1;
}

service ContextLinkageService {
	/**
	* Creates new context and associates running instance to it 
	*/
	rpc CreateContext(google.protobuf.Empty) returns (Context);

	/**
	* Associates running instance with provided context, useful if we want to link already running instance
	*/
	rpc JoinContext(Context) returns (google.protobuf.Empty);

	/**
	* Get list of associated contexts
	*/
	rpc GetContexts(google.protobuf.Empty) returns (ContextsList);

	/**
	* Discover list of linked invocations for specified context
	*/
	rpc GetLinkedInvocations(Context) returns (InvocationsList);

	/**
	* Get Linked Invocations for all associated contexts
	*/
	rpc GetAllLinkedInvocations(google.protobuf.Empty) returns (ContextToInvocationsList);
}